--- a/log.html
+++ b/log.html
@@ -10,12 +10,12 @@
       @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
         a{color:rgba(0, 0, 0, 0.7); transition: .5s;}
         a:hover{color:inherit}
-        code{font-family: "Fira Mono"; letter-spacing:0px;
+        code{font-family: "monolisa"; letter-spacing:0px;
         /* background-color: rgba(211,211,211,0.7); border-radius: 5px; */
       }
     </style>
 </head>
-<body style="margin: 5vh 5vw; font-family: chirp_r;">
+<body style="margin: 5vh 5vw; font-family: inter;">
     <h2 style="font-weight: normal;">update log of <a href="https://zhoulingyu.net"><code>zhoulingyu.net</code></a></h2>
     <table class="timeline">
         <tr>
@@ -131,7 +131,7 @@
     </table>
 <br>
     <hr>
-    <center>
+    <center style="font-size: smaller;">
         built using <a href="https://xolyn.github.io/timeline.css">timeline.css</a>, a product of <a href="#">YuWidget</a> project
     </center>
 </body>
