--- a/notyet.html
+++ b/notyet.html
@@ -5,16 +5,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Coming Soon...</title>
 <link rel="icon" href="https://www.svgrepo.com/show/370467/page-hidden.svg">
+<link rel="preconnect" href="https://rsms.me/">
+<link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap');
+:root {
+  font-family: Inter, sans-serif;
+  font-feature-settings: 'liga' 1, 'calt' 1;
+}
 </style>
 </head>
-<body style="margin-left: 5vw; margin-right: 5vw;font-family: 'Schibsted Grotesk'; font-weight: 600">
+<body style="margin-left: 5vw; margin-right: 5vw;font-family: Inter, sans-serif; font-weight: 600">
 <div style="text-align: center; margin-top: 27.5vh;">
     <p style="font-size: x-large ;">Sorry, this page is still under construction!</p>
     <img oncontextmenu="return false;" style="width: 10em; " src="https://f.xoy.one/assets/giphy.gif">
-    <p><br><a style="text-decoration: none; color:inherit; font-weight: 900;" href="javascript:history.back()"><span style="font-size: medium; border: black 2.3px solid; border-radius: 999px; width: min-content; padding: 2px 6px 4px;">&larr;</span></a>
-        <a style="text-decoration: none; color:inherit" href="index.html"><span style="font-size: medium; border: black 2.3px solid; border-radius: 999px; width: min-content; padding: 2px 8px 4px;">Home</span></a></p>
+    <p>
+        
+        <br>
+        <a style="text-decoration: none; color:inherit;" href="javascript:history.back()"><span style="font-size: medium;  "> Back</span></a>
+        <p></p>
+        <a style="text-decoration: none; color:inherit" href="index.html"><span style="font-size: medium; "> Home</span></a></p>
 </div>
 <script src='https://f.zly.vg/js/newurl.js'></script>
 
