--- a/file_tree.html
+++ b/file_tree.html
@@ -21,9 +21,89 @@ summary{cursor:pointer}</style>
 <details>
 <summary>.bu</summary>
 <ul>
+<details>
+<summary>prevIndex</summary>
+<ul>
+<li><a href=".\.bu\prevIndex\await.html">await.html</a></li>
+<li><a href=".\.bu\prevIndex\give.html">give.html</a></li>
+<li><a href=".\.bu\prevIndex\index0.html">index0.html</a></li>
+<li><a href=".\.bu\prevIndex\simplefor.html">simplefor.html</a></li>
+<li><a href=".\.bu\prevIndex\sm.html">sm.html</a></li>
+</ul>
+</details>
+<li><a href=".\.bu\allwork.html">allwork.html</a></li>
+<li><a href=".\.bu\apple.html">apple.html</a></li>
 <li><a href=".\.bu\fontcss.html">fontcss.html</a></li>
 <li><a href=".\.bu\fontcss.n.html">fontcss.n.html</a></li>
+<li><a href=".\.bu\goatori.html">goatori.html</a></li>
 <li><a href=".\.bu\index-part.txt">index-part.txt</a></li>
+<li><a href=".\.bu\me.html">me.html</a></li>
+<li><a href=".\.bu\meabout.html">meabout.html</a></li>
+<li><a href=".\.bu\nic.html">nic.html</a></li>
+<li><a href=".\.bu\port0.html">port0.html</a></li>
+<li><a href=".\.bu\self.html">self.html</a></li>
+<li><a href=".\.bu\showimg.html">showimg.html</a></li>
+<li><a href=".\.bu\spin.html">spin.html</a></li>
+<li><a href=".\.bu\splice.html">splice.html</a></li>
+<li><a href=".\.bu\zune.html">zune.html</a></li>
+</ul>
+</details>
+<details>
+<summary>5999proj</summary>
+<ul>
+<details>
+<summary>images</summary>
+<ul>
+<li><a href=".\5999proj\images\slide_1.png">slide_1.png</a></li>
+<li><a href=".\5999proj\images\slide_10.png">slide_10.png</a></li>
+<li><a href=".\5999proj\images\slide_11.png">slide_11.png</a></li>
+<li><a href=".\5999proj\images\slide_12.png">slide_12.png</a></li>
+<li><a href=".\5999proj\images\slide_13.png">slide_13.png</a></li>
+<li><a href=".\5999proj\images\slide_14.png">slide_14.png</a></li>
+<li><a href=".\5999proj\images\slide_15.png">slide_15.png</a></li>
+<li><a href=".\5999proj\images\slide_16.png">slide_16.png</a></li>
+<li><a href=".\5999proj\images\slide_17.png">slide_17.png</a></li>
+<li><a href=".\5999proj\images\slide_18.png">slide_18.png</a></li>
+<li><a href=".\5999proj\images\slide_19.png">slide_19.png</a></li>
+<li><a href=".\5999proj\images\slide_2.png">slide_2.png</a></li>
+<li><a href=".\5999proj\images\slide_20.png">slide_20.png</a></li>
+<li><a href=".\5999proj\images\slide_21.png">slide_21.png</a></li>
+<li><a href=".\5999proj\images\slide_22.png">slide_22.png</a></li>
+<li><a href=".\5999proj\images\slide_23.png">slide_23.png</a></li>
+<li><a href=".\5999proj\images\slide_24.png">slide_24.png</a></li>
+<li><a href=".\5999proj\images\slide_25.png">slide_25.png</a></li>
+<li><a href=".\5999proj\images\slide_26.png">slide_26.png</a></li>
+<li><a href=".\5999proj\images\slide_27.png">slide_27.png</a></li>
+<li><a href=".\5999proj\images\slide_28.png">slide_28.png</a></li>
+<li><a href=".\5999proj\images\slide_3.png">slide_3.png</a></li>
+<li><a href=".\5999proj\images\slide_4.png">slide_4.png</a></li>
+<li><a href=".\5999proj\images\slide_5.png">slide_5.png</a></li>
+<li><a href=".\5999proj\images\slide_6.png">slide_6.png</a></li>
+<li><a href=".\5999proj\images\slide_7.png">slide_7.png</a></li>
+<li><a href=".\5999proj\images\slide_8.png">slide_8.png</a></li>
+<li><a href=".\5999proj\images\slide_9.png">slide_9.png</a></li>
+</ul>
+</details>
+<li><a href=".\5999proj\index.html">index.html</a></li>
+<li><a href=".\5999proj\index0.html">index0.html</a></li>
+</ul>
+</details>
+<details>
+<summary>academic</summary>
+<ul>
+<li><a href=".\academic\5010note.md">5010note.md</a></li>
+<li><a href=".\academic\5060note.md">5060note.md</a></li>
+<li><a href=".\academic\5065note.md">5065note.md</a></li>
+<li><a href=".\academic\535hw9.html">535hw9.html</a></li>
+<li><a href=".\academic\535sp23note.html">535sp23note.html</a></li>
+</ul>
+</details>
+<details>
+<summary>api</summary>
+<ul>
+<li><a href=".\api\cursor.html">cursor.html</a></li>
+<li><a href=".\api\mfi.html">mfi.html</a></li>
+<li><a href=".\api\widgets.html">widgets.html</a></li>
 </ul>
 </details>
 <details>
@@ -45,16 +125,11 @@ summary{cursor:pointer}</style>
 </ul>
 </details>
 <details>
-<summary>data</summary>
+<summary>ceeproj</summary>
 <ul>
-<li><a href=".\data\test.csv">test.csv</a></li>
-<li><a href=".\data\train.csv">train.csv</a></li>
-<li><a href=".\data\validation.csv">validation.csv</a></li>
+<li><a href=".\ceeproj\index.html">index.html</a></li>
+<li><a href=".\ceeproj\output.png">output.png</a></li>
 </ul>
-</details>
-<details>
-<summary>empty</summary>
-<ul><span style="color:grey;font-style:italic">blank folder</span></ul>
 </details>
 <details>
 <summary>fg</summary>
@@ -70,31 +145,48 @@ summary{cursor:pointer}</style>
 <summary>fonts</summary>
 <ul>
 <li><a href=".\fonts\.get.py">.get.py</a></li>
+<li><a href=".\fonts\Akkurat-Bold.otf">Akkurat-Bold.otf</a></li>
+<li><a href=".\fonts\Akkurat-Regular.otf">Akkurat-Regular.otf</a></li>
 <li><a href=".\fonts\apple_tc.ttf">apple_tc.ttf</a></li>
 <li><a href=".\fonts\aptos.ttf">aptos.ttf</a></li>
+<li><a href=".\fonts\AtlasGrotesk-Medium.otf">AtlasGrotesk-Medium.otf</a></li>
+<li><a href=".\fonts\AtlasGrotesk-Regular.otf">AtlasGrotesk-Regular.otf</a></li>
 <li><a href=".\fonts\BDLifelessGrotesk.ttf">BDLifelessGrotesk.ttf</a></li>
+<li><a href=".\fonts\bootstrap-icons.woff">bootstrap-icons.woff</a></li>
+<li><a href=".\fonts\bootstrap-icons.woff2">bootstrap-icons.woff2</a></li>
 <li><a href=".\fonts\CascadiaMono-Regular.ttf">CascadiaMono-Regular.ttf</a></li>
+<li><a href=".\fonts\CharlesModern-Bold.woff">CharlesModern-Bold.woff</a></li>
+<li><a href=".\fonts\CharlesModern-Regular.woff">CharlesModern-Regular.woff</a></li>
 <li><a href=".\fonts\ChirpMedium.ttf">ChirpMedium.ttf</a></li>
 <li><a href=".\fonts\ChirpRegular.ttf">ChirpRegular.ttf</a></li>
 <li><a href=".\fonts\cour.ttf">cour.ttf</a></li>
 <li><a href=".\fonts\CourierPrime-Regular.ttf">CourierPrime-Regular.ttf</a></li>
+<li><a href=".\fonts\davidoff.woff">davidoff.woff</a></li>
 <li><a href=".\fonts\diag_b.ttf">diag_b.ttf</a></li>
 <li><a href=".\fonts\diag_r.ttf">diag_r.ttf</a></li>
 <li><a href=".\fonts\dtb.ttf">dtb.ttf</a></li>
+<li><a href=".\fonts\equinox.woff2">equinox.woff2</a></li>
 <li><a href=".\fonts\ere.otf">ere.otf</a></li>
 <li><a href=".\fonts\Erewhon-Bold.pfb.ttf">Erewhon-Bold.pfb.ttf</a></li>
 <li><a href=".\fonts\ficon-reg.ttf">ficon-reg.ttf</a></li>
 <li><a href=".\fonts\ficon-rescale.ttf">ficon-rescale.ttf</a></li>
 <li><a href=".\fonts\FiraMono-Regular.ttf">FiraMono-Regular.ttf</a></li>
 <li><a href=".\fonts\FiraSans-Regular.ttf">FiraSans-Regular.ttf</a></li>
-<li><a href=".\fonts\FSKoopmanVF.ttf">FSKoopmanVF.ttf</a></li>
+<li><a href=".\fonts\FSKoopmanVF.woff2">FSKoopmanVF.woff2</a></li>
 <li><a href=".\fonts\GeistVF.ttf">GeistVF.ttf</a></li>
 <li><a href=".\fonts\georgia.ttf">georgia.ttf</a></li>
 <li><a href=".\fonts\georgiab.ttf">georgiab.ttf</a></li>
+<li><a href=".\fonts\goat.woff2">goat.woff2</a></li>
 <li><a href=".\fonts\GT America Regular.ttf">GT America Regular.ttf</a></li>
+<li><a href=".\fonts\haas.woff">haas.woff</a></li>
 <li><a href=".\fonts\HelveticaNowDisplay-Regular.otf">HelveticaNowDisplay-Regular.otf</a></li>
 <li><a href=".\fonts\Human BBY Web.ttf">Human BBY Web.ttf</a></li>
+<li><a href=".\fonts\InterVariable.woff2">InterVariable.woff2</a></li>
 <li><a href=".\fonts\iom.otf">iom.otf</a></li>
+<li><a href=".\fonts\karla.woff2">karla.woff2</a></li>
+<li><a href=".\fonts\MADE.otf">MADE.otf</a></li>
+<li><a href=".\fonts\MayoClinicSans-Bold.woff2">MayoClinicSans-Bold.woff2</a></li>
+<li><a href=".\fonts\MayoClinicSans-Regular.woff2">MayoClinicSans-Regular.woff2</a></li>
 <li><a href=".\fonts\Monaco.ttf">Monaco.ttf</a></li>
 <li><a href=".\fonts\Monolisa Font.ttf">Monolisa Font.ttf</a></li>
 <li><a href=".\fonts\Neue Kaine Variable.ttf">Neue Kaine Variable.ttf</a></li>
@@ -103,8 +195,14 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\nhm.ttf">nhm.ttf</a></li>
 <li><a href=".\fonts\nhr.ttf">nhr.ttf</a></li>
 <li><a href=".\fonts\Palo-Regular.ttf">Palo-Regular.ttf</a></li>
+<li><a href=".\fonts\PassengerSans-Medium-BF63eaffd03cb6f.otf">PassengerSans-Medium-BF63eaffd03cb6f.otf</a></li>
+<li><a href=".\fonts\PassengerSans-Regular-BF63eaffd178ad9.otf">PassengerSans-Regular-BF63eaffd178ad9.otf</a></li>
+<li><a href=".\fonts\psu.woff2">psu.woff2</a></li>
 <li><a href=".\fonts\Px437_IBM_EGA_8x14.ttf">Px437_IBM_EGA_8x14.ttf</a></li>
 <li><a href=".\fonts\Questa_Sans_Regular.otf">Questa_Sans_Regular.otf</a></li>
+<li><a href=".\fonts\RightGrotesk-Medium.otf">RightGrotesk-Medium.otf</a></li>
+<li><a href=".\fonts\RightGrotesk-WideMedium.otf">RightGrotesk-WideMedium.otf</a></li>
+<li><a href=".\fonts\scto.woff2">scto.woff2</a></li>
 <li><a href=".\fonts\Segoe Pro.ttf">Segoe Pro.ttf</a></li>
 <li><a href=".\fonts\sf-round.otf">sf-round.otf</a></li>
 <li><a href=".\fonts\sf_b.otf">sf_b.otf</a></li>
@@ -114,6 +212,7 @@ summary{cursor:pointer}</style>
 <li><a href=".\fonts\sneak.ttf">sneak.ttf</a></li>
 <li><a href=".\fonts\sohne.otf">sohne.otf</a></li>
 <li><a href=".\fonts\SuisseIntl-Regular.ttf">SuisseIntl-Regular.ttf</a></li>
+<li><a href=".\fonts\UniversalSansDisplayGX.woff2">UniversalSansDisplayGX.woff2</a></li>
 <li><a href=".\fonts\VulfSans-Regular.ttf">VulfSans-Regular.ttf</a></li>
 </ul>
 </details>
@@ -210,17 +309,9 @@ summary{cursor:pointer}</style>
 </details>
 <li><a href=".\.gitignore">.gitignore</a></li>
 <li><a href=".\404.html">404.html</a></li>
-<li><a href=".\5010note.md">5010note.md</a></li>
-<li><a href=".\5060note.md">5060note.md</a></li>
-<li><a href=".\5065note.md">5065note.md</a></li>
-<li><a href=".\535hw9.html">535hw9.html</a></li>
-<li><a href=".\535sp23note.html">535sp23note.html</a></li>
-<li><a href=".\allwork.html">allwork.html</a></li>
-<li><a href=".\api.html">api.html</a></li>
-<li><a href=".\await.html">await.html</a></li>
-<li><a href=".\cursor.html">cursor.html</a></li>
 <li><a href=".\cyb.html">cyb.html</a></li>
 <li><a href=".\fdd.html">fdd.html</a></li>
+<li><a href=".\fg.html">fg.html</a></li>
 <li><a href=".\fg2.html">fg2.html</a></li>
 <li><a href=".\file_tree.html">file_tree.html</a></li>
 <li><a href=".\font.css">font.css</a></li>
@@ -228,34 +319,18 @@ summary{cursor:pointer}</style>
 <li><a href=".\gall.html">gall.html</a></li>
 <li><a href=".\gall.py">gall.py</a></li>
 <li><a href=".\getip.html">getip.html</a></li>
-<li><a href=".\give.html">give.html</a></li>
 <li><a href=".\glyph.html">glyph.html</a></li>
 <li><a href=".\grd.html">grd.html</a></li>
+<li><a href=".\icon.css">icon.css</a></li>
+<li><a href=".\icons.md">icons.md</a></li>
 <li><a href=".\index.html">index.html</a></li>
-<li><a href=".\index0.html">index0.html</a></li>
+<li><a href=".\ir.css">ir.css</a></li>
 <li><a href=".\log.html">log.html</a></li>
-<li><a href=".\me.html">me.html</a></li>
-<li><a href=".\meabout.html">meabout.html</a></li>
-<li><a href=".\mfi.html">mfi.html</a></li>
-<li><a href=".\nic.html">nic.html</a></li>
 <li><a href=".\notyet.html">notyet.html</a></li>
-<li><a href=".\oly.html">oly.html</a></li>
 <li><a href=".\proj.html">proj.html</a></li>
 <li><a href=".\sb.html">sb.html</a></li>
-<li><a href=".\self.html">self.html</a></li>
-<li><a href=".\showimg.html">showimg.html</a></li>
-<li><a href=".\simplefor.html">simplefor.html</a></li>
-<li><a href=".\sm.html">sm.html</a></li>
-<li><a href=".\snake.html">snake.html</a></li>
-<li><a href=".\snakej.html">snakej.html</a></li>
-<li><a href=".\spin.html">spin.html</a></li>
-<li><a href=".\splice.html">splice.html</a></li>
-<li><a href=".\test.html">test.html</a></li>
-<li><a href=".\test.jpg">test.jpg</a></li>
 <li><a href=".\timeline.css">timeline.css</a></li>
-<li><a href=".\widgets.html">widgets.html</a></li>
 <li><a href=".\yafiwg.py">yafiwg.py</a></li>
-<li><a href=".\zune.html">zune.html</a></li>
 </ul>
 </details>
 
