--- a/5999proj/index.html
+++ b/5999proj/index.html
@@ -117,6 +117,10 @@ color: black;
 section>h2{
     font-size: 0px;
 }
+
+summary{
+     width: min-content;
+}
 </style>
 </head>
 <body style="margin: 0;">
