--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ table, tr, td {
         </div>
         <div id="pcMenu" style="max-width: 75%; overflow-x:auto; text-wrap: nowrap; margin: auto 0;">
             <a href="https://blog.zhoulingyu.net">Blog</a>
-            <a href="https://xolyn.github.io/proj">Project</a>
+            <!-- <a href="https://xolyn.github.io/proj">Project</a> -->
             <a href="https://portfolio.zhoulingyu.net">Portfolio</a>
             <a href="https://drive.zhoulingyu.net" translate="no">ZDrive</a>
             <a href="https://xolyn.github.io/fg2.html">Font Studio</a>
